// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<dl
  class="sc-bdVaJa icGVfW"
>
  <dt
    class="sc-bxivhb cTGsno sc-htpNat gPRtVk"
  >
    Taylor
  </dt>
  <dd
    class="sc-ifAKCX jjAkxp"
  >
    Swift
  </dd>
</dl>
`;

exports[`statLine is passed correctly to children 1`] = `
<dl
  class="sc-bdVaJa lfQhji"
>
  <dt
    class="sc-bxivhb laDCst sc-htpNat gPRtVk"
  >
    Taylor
  </dt>
  <dd
    class="sc-ifAKCX imMJrI"
  >
    Swift
  </dd>
</dl>
`;
